<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_registro2"
    tools:context=".vista.RegistroActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/et_rg_usuario"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/et_rg_ingrese_nuevo_usuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rg_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_rg_nombre"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/et_rg_ingrese_su_nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rg_apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rg_usuario" />

    <EditText
        android:id="@+id/et_rg_apellido"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/et_rg_ingrese_su_apellido"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rg_nacimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rg_nombre" />

    <EditText
        android:id="@+id/et_rg_new_pass"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/et_rg_new_pass"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rg_repite_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rg_nacimiento" />

    <EditText
        android:id="@+id/et_rg_repite_pass"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/et_rg_repita_contrase_a"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rg_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rg_new_pass" />

    <EditText
        android:id="@+id/et_rg_correo"
        android:layout_width="341dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/et_rg_correo_electronico"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rg_repite_pass" />

    <EditText
        android:id="@+id/et_rg_nacimiento"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/et_rg_nacimiento"
        android:inputType="date"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rg_new_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rg_apellido" />

</android.support.constraint.ConstraintLayout>